freemed project changelog
($Id$)

* Tue Feb 20 2001 fforest
	added unpaid_procs_report.module to the reports catagory.
    changed coverage module to enum the status and type codes as
      strings.
    changed the payment module so it can be invoked from the unpaid procs
    report to display the entire ledger for a patient.

* Mon Feb 19 2001 rufustfirefly
  - added link in reports.php back to main menu
  - added "back" link to lib/module_maintenance.php in del method

* Sat Feb 17 2001 fforest
	Added a new patient_coverage module to eliminate the need for the patient
        code to have to handle it.
	patient copied patient.php to old/patient.php. removed all 
        payer/gurantor code from patient.
    edi module. added a lot of code /lib/module_edi to get 
      ready for creating the new highmark edi module. this should be
      common code.
    cpt module. fixed bug where cptdeftos was not being captured.
    generate_forms module. fixed a efw bugs due to globals. changed
        the query INSERT's to sql->insert_qeury. fixed bug in guarantor
        coverage checking. due to global problems some unset's need changing
        to $var = "";
    payment module. change INSERT to insert_query.
	API tighten up return code handling in get_active_guarids and payerids.
       added 2 new functions for the coverage module. get_all_insured_patients
       and verify_patient_coverage. 
    
* Wed Feb 14 2001 rufustfirefly
  - cleaned up lib/{freemed,containers}.php a little

* Wed Feb 14 2001 fforest
	add lib/modules_billing.php
        modules/place_of_service.module (new place of service table maint)
        modules/generate_forms.module   (old generate_fixedforms now a module)
    admin - added pos table (like tos) added psrtos to facility
    billing_functions pulled all the payment links. (now in manage as module)
        pulled the old links to generate (now a module)
		pulled the link for manage_bills. (it's an easy convert won't take long)